--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
 
 after_script:
   - cd ./public
+  - rm CNAME
   - echo "sinchang.me" >> CNAME
   - git init
   - git config user.name "sinchang"
