--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: sinchang
-subtitle: to be a front-end developer.
+subtitle: code. eat. sleep. loop ✌
 description:
 author: sinchang
 language:
