--- a/themes/zenblog/_config.yml
+++ b/themes/zenblog/_config.yml
@@ -17,11 +17,10 @@ disqus_shortname:
 google_analytics:
 
 # Social Media
-twitter: sinchangwen
-weibo: 772608204
-facebook:
-github: sinchang
-email: sinchangwen@gmail.com
-instagram: sinchangwen
-url:
-weixin: http://ooo.0o0.ooo/2016/05/21/574012ec9069d.png
+# twitter: sinchangwen
+# weibo: 772608204
+# facebook:
+# github: sinchang
+# email: sinchangwen@gmail.com
+# instagram: sinchangwen
+# url: weixin: http://ooo.0o0.ooo/2016/05/21/574012ec9069d.png
